Modify machine ID to conform to required format.

Bug: 845757
Change-Id: Ic7ea2c90cbc7b7bf3e6534333fcdac6b4e95336e
Reviewed-on: https://chromium-review.googlesource.com/1069875
Reviewed-by: Roger Tawa <rogerta@chromium.org>
Commit-Queue: Jong Ahn <jongahn@google.com>
Cr-Commit-Position: refs/heads/master@{#561270}