rlz/lib/machine_id_unittest.cc
@@ -6,6 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "rlz/lib/machine_id.h"
 
 #include "base/strings/string16.h"
+#include "base/strings/string_util.h"
 #include "base/strings/utf_string_conversions.h"
 #include "rlz/test/rlz_test_helpers.h"
 #include "testing/gtest/include/gtest/gtest.h"
@@ -27,5 +28,16 @@ TEST(MachineDealCodeTestMachineId, MachineIdIsUnique) {
   rlz_lib::GetMachineId(&id1);
   rlz_lib::GetMachineId(&id2);
   EXPECT_NE(id1, id2);
+}
+
+TEST(MachineDealCodeTestMachineId, MachineIdIsProperFormat) {
+  std::string id;
+  rlz_lib::GetMachineId(&id);
+  std::string prefix = id.substr(0, 5);
+
+  EXPECT_EQ(50u, id.length());
+  EXPECT_TRUE(
+      base::ContainsOnlyChars(id, "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"));
+  EXPECT_STREQ("NONCE", prefix.c_str());
 }
 #endif
